Registered a lot of custom codecs and was seemingly ready to test the datagen of a Piglin brain, but runData resulted in nothing but a bunch of errors in the log.