@@ -13,19 +13,13 @@ import com.infamous.aptitude.behavior.vanilla.pathfinder.PathfinderRandomStrollM
 import com.infamous.aptitude.behavior.vanilla.pathfinder.PathfinderSetWalkTargetAwayFromMaker;
 import com.infamous.aptitude.behavior.vanilla.piglin.PiglinStartHuntingHoglinMaker;
 import com.infamous.aptitude.behavior.vanilla.piglin.PiglinStopHoldingItemIfNoLongerAdmiringMaker;
-import com.infamous.aptitude.logic.bipredicate.BiPredicateMaker;
-import com.infamous.aptitude.logic.bipredicate.EntityIsValueMemoryValue;
-import com.infamous.aptitude.logic.bipredicate.OptionalResultOfFirstIsSecond;
-import com.infamous.aptitude.logic.bipredicate.PiglinlikeStopRiding;
-import com.infamous.aptitude.logic.bipredicate.util.AllOfBiPredicateMaker;
-import com.infamous.aptitude.logic.bipredicate.util.OnlyCheckFirst;
-import com.infamous.aptitude.logic.bipredicate.util.OnlyCheckSecond;
-import com.infamous.aptitude.logic.function.FunctionMaker;
+import com.infamous.aptitude.logic.bipredicate.*;
+import com.infamous.aptitude.logic.bipredicate.util.NegateBiPredicateMaker;
 import com.infamous.aptitude.logic.function.PiglinlikeTargetFinder;
 import com.infamous.aptitude.logic.predicate.*;
 import com.infamous.aptitude.logic.predicate.utility.AllOfPredicateMaker;
 import com.infamous.aptitude.logic.predicate.utility.AlwaysTrue;
-import com.infamous.aptitude.logic.predicate.utility.AnyOf;
+import com.infamous.aptitude.logic.predicate.utility.AnyOfPredicateMaker;
 import com.infamous.aptitude.logic.predicate.utility.Negate;
 import com.mojang.datafixers.util.Pair;
 import net.minecraft.tags.ItemTags;
@@ -34,12 +28,12 @@ import net.minecraft.util.valueproviders.UniformInt;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.ai.behavior.SetEntityLookTargetSometimes;
 import net.minecraft.world.entity.ai.memory.MemoryModuleType;
 import net.minecraft.world.entity.ai.memory.MemoryStatus;
 
 import java.util.List;
-import java.util.Optional;
 
 public class PiglinAiDefinition {
     private static final int REPELLENT_DETECTION_RANGE_HORIZONTAL = 8;
@@ -61,7 +55,6 @@ public class PiglinAiDefinition {
     private static final int DESIRED_DISTANCE_FROM_ZOMBIFIED = 6;
     private static final UniformInt AVOID_ZOMBIFIED_DURATION = TimeUtil.rangeOfSeconds(5, 7);
     private static final UniformInt BABY_AVOID_NEMESIS_DURATION = TimeUtil.rangeOfSeconds(5, 7);
-    private static final float PROBABILITY_OF_CELEBRATION_DANCE = 0.1F;
     private static final float SPEED_MULTIPLIER_WHEN_AVOIDING = 1.0F;
     private static final float SPEED_MULTIPLIER_WHEN_RETREATING = 1.0F;
     private static final float SPEED_MULTIPLIER_WHEN_MOUNTING = 0.8F;
@@ -69,6 +62,19 @@ public class PiglinAiDefinition {
     private static final float SPEED_MULTIPLIER_WHEN_GOING_TO_CELEBRATE_LOCATION = 1.0F;
     private static final float SPEED_MULTIPLIER_WHEN_DANCING = 0.6F;
     private static final float SPEED_MULTIPLIER_WHEN_IDLING = 0.6F;
+
+    static ImmutableList<Pair<Integer, ? extends BehaviorMaker>> initCoreActivity() {
+        return ImmutableList.of(
+                Pair.of(0, MobLookAtTargetSinkMaker.simple()),
+                Pair.of(1, MobMoveToTargetSinkMaker.simple()),
+                Pair.of(2, new InteractWithDoorMaker()),
+                Pair.of(3, babyAvoidNemesis()),
+                Pair.of(4, avoidZombified()),
+                Pair.of(5, new PiglinStopHoldingItemIfNoLongerAdmiringMaker()),
+                Pair.of(6, new StartAdmiringItemIfSeenMaker(ADMIRE_DURATION)),
+                Pair.of(7, new StartCelebratingIfTargetDeadMaker(CELEBRATION_TIME, PiglinlikeCanDance.piglin())),
+                Pair.of(8, new StopBeingAngryIfTargetDeadMaker()));
+    }
 
     private static BehaviorMaker babyAvoidNemesis() {
         return new CopyMemoryWithExpiryMaker<>(new EntityIsBaby(), MemoryModuleType.NEAREST_VISIBLE_NEMESIS, MemoryModuleType.AVOID_TARGET, BABY_AVOID_NEMESIS_DURATION);
@@ -82,8 +88,25 @@ public class PiglinAiDefinition {
         return new EntityIsNearEntityMemory(MemoryModuleType.NEAREST_VISIBLE_ZOMBIFIED, DESIRED_DISTANCE_FROM_ZOMBIFIED);
     }
 
-    static BiPredicateMaker<LivingEntity, LivingEntity> wantsToDance(){
-        return new AllOfBiPredicateMaker(List.of(new OnlyCheckSecond<>(new EntityIsEntityType(EntityType.HOGLIN)), new OnlyCheckFirst<>(new EntityGameTimeSeededRandomChance(PROBABILITY_OF_CELEBRATION_DANCE))));
+
+    static ImmutableList<Pair<Integer, ? extends BehaviorMaker>> initIdleActivity() {
+        return ImmutableList.of(
+                Pair.of(10, new SetEntityLookTargetMaker(isPlayerHoldingLovedItem(), MAX_LOOK_DIST_FOR_PLAYER_HOLDING_LOVED_ITEM)),
+                Pair.of(11, new MobStartAttackingMaker(isAdult(), PiglinlikeTargetFinder.piglin())),
+                Pair.of(12, new SequenceTriggerIfMaker<>(new PiglinCanHunt(), new PiglinStartHuntingHoglinMaker())),
+                Pair.of(13, avoidRepellent()),
+                Pair.of(14, babySometimesRideBabyHoglin()),
+                Pair.of(15, createIdleLookBehaviors()),
+                Pair.of(16, createIdleMovementBehaviors()),
+                Pair.of(17, new SetLookAndInteractMaker(EntityType.PLAYER, 4)));
+    }
+
+    private static PredicateMaker<LivingEntity> isPlayerHoldingLovedItem() {
+        return new AllOfPredicateMaker(List.of(new EntityIsEntityType(EntityType.PLAYER), new EntityIsHolding(new ItemIsTag(ItemTags.PIGLIN_LOVED))));
+    }
+
+    private static PredicateMaker<LivingEntity> isAdult(){
+        return new Negate<>(new EntityIsBaby());
     }
 
     private static BehaviorMaker avoidRepellent() {
@@ -95,13 +118,6 @@ public class PiglinAiDefinition {
         return new CopyMemoryWithExpiryMaker<>(new AllOfPredicateMaker(List.of(new EntityIsBaby(), new EntityTickerTickDownAndCheckMaker(ticker))), MemoryModuleType.NEAREST_VISIBLE_BABY_HOGLIN, MemoryModuleType.RIDE_TARGET, RIDE_DURATION);
     }
 
-    private static ImmutableList<Pair<BehaviorMaker, Integer>> createLookBehaviors() {
-        return ImmutableList.of(
-                Pair.of(SetEntityLookTargetMaker.forEntityType(EntityType.PLAYER, MAX_LOOK_DIST), 1),
-                Pair.of(SetEntityLookTargetMaker.forEntityType(EntityType.PIGLIN, MAX_LOOK_DIST), 1),
-                Pair.of(SetEntityLookTargetMaker.simple(MAX_LOOK_DIST), 1));
-    }
-
     private static BehaviorMaker createIdleLookBehaviors() {
         return RunOneMaker.simple(ImmutableList.<Pair<? extends BehaviorMaker, Integer>>builder()
                 .addAll(createLookBehaviors())
@@ -109,12 +125,11 @@ public class PiglinAiDefinition {
                 .build());
     }
 
-    private static PredicateMaker<LivingEntity> seesPlayerHoldingLovedItem() {
-        return new EntityCheckMemory(MemoryModuleType.NEAREST_PLAYER_HOLDING_WANTED_ITEM, MemoryStatus.VALUE_PRESENT);
-    }
-
-    private static PredicateMaker<LivingEntity> doesntSeeAnyPlayerHoldingLovedItem() {
-        return new Negate<>(seesPlayerHoldingLovedItem());
+    private static ImmutableList<Pair<BehaviorMaker, Integer>> createLookBehaviors() {
+        return ImmutableList.of(
+                Pair.of(SetEntityLookTargetMaker.forEntityType(EntityType.PLAYER, MAX_LOOK_DIST), 1),
+                Pair.of(SetEntityLookTargetMaker.forEntityType(EntityType.PIGLIN, MAX_LOOK_DIST), 1),
+                Pair.of(SetEntityLookTargetMaker.simple(MAX_LOOK_DIST), 1));
     }
 
     private static BehaviorMaker createIdleMovementBehaviors() {
@@ -126,46 +141,17 @@ public class PiglinAiDefinition {
                         Pair.of(new DoNothingMaker(30, 60), 1)));
     }
 
-    private static PredicateMaker<LivingEntity> isPlayerHoldingLovedItem() {
-        return new AllOfPredicateMaker(List.of(new EntityIsEntityType(EntityType.PLAYER), new EntityIsHolding(new ItemIsTag(ItemTags.PIGLIN_LOVED))));
+    private static PredicateMaker<LivingEntity> doesntSeeAnyPlayerHoldingLovedItem() {
+        return new Negate<>(seesPlayerHoldingLovedItem());
     }
 
-    private static PredicateMaker<LivingEntity> isAdult(){
-        return new Negate<>(new EntityIsBaby());
-    }
-
-    private static FunctionMaker<LivingEntity, Optional<? extends LivingEntity>> findNearestValidAttackTarget(){
-        return new PiglinlikeTargetFinder(isNearZombified(), MemoryModuleType.ANGRY_AT, MemoryModuleType.UNIVERSAL_ANGER, MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER, MemoryModuleType.NEAREST_VISIBLE_NEMESIS, MemoryModuleType.NEAREST_TARGETABLE_PLAYER_NOT_WEARING_GOLD);
-    }
-
-    static ImmutableList<Pair<Integer, ? extends BehaviorMaker>> initCoreActivity() {
-        return ImmutableList.of(
-                Pair.of(0, MobLookAtTargetSinkMaker.simple()),
-                Pair.of(1, MobMoveToTargetSinkMaker.simple()),
-                Pair.of(2, new InteractWithDoorMaker()),
-                Pair.of(3, babyAvoidNemesis()),
-                Pair.of(4, avoidZombified()),
-                Pair.of(5, new PiglinStopHoldingItemIfNoLongerAdmiringMaker()),
-                Pair.of(6, new StartAdmiringItemIfSeenMaker(ADMIRE_DURATION)),
-                Pair.of(7, new StartCelebratingIfTargetDeadMaker(CELEBRATION_TIME, wantsToDance())),
-                Pair.of(8, new StopBeingAngryIfTargetDeadMaker()));
-    }
-
-    static ImmutableList<Pair<Integer, ? extends BehaviorMaker>> initIdleActivity() {
-        return ImmutableList.of(
-                Pair.of(10, new SetEntityLookTargetMaker(isPlayerHoldingLovedItem(), MAX_LOOK_DIST_FOR_PLAYER_HOLDING_LOVED_ITEM)),
-                Pair.of(11, new MobStartAttackingMaker(isAdult(), findNearestValidAttackTarget())),
-                Pair.of(12, new SequenceTriggerIfMaker<>(new PiglinCanHunt(), new PiglinStartHuntingHoglinMaker())),
-                Pair.of(13, avoidRepellent()),
-                Pair.of(14, babySometimesRideBabyHoglin()),
-                Pair.of(15, createIdleLookBehaviors()),
-                Pair.of(16, createIdleMovementBehaviors()),
-                Pair.of(17, new SetLookAndInteractMaker(EntityType.PLAYER, 4)));
+    private static PredicateMaker<LivingEntity> seesPlayerHoldingLovedItem() {
+        return new EntityCheckMemory(MemoryModuleType.NEAREST_PLAYER_HOLDING_WANTED_ITEM, MemoryStatus.VALUE_PRESENT);
     }
 
     static ImmutableList<Pair<Integer, ? extends BehaviorMaker>> initFightActivity() {
         return ImmutableList.of(
-                Pair.of(10, CustomStopAttackingIfTargetInvalidMaker.predicateOnly(new OptionalResultOfFirstIsSecond(findNearestValidAttackTarget()))),
+                Pair.of(10, CustomStopAttackingIfTargetInvalidMaker.predicateOnly(new NegateBiPredicateMaker<>(isNearestValidAttackTarget()))),
                 Pair.of(11, new SequenceTriggerIfMaker<>(new EntityIsHolding(new ItemIsCrossbow()), new BackUpIfTooCloseMaker(MIN_DESIRED_DIST_FROM_TARGET_WHEN_HOLDING_CROSSBOW, SPEED_WHEN_STRAFING_BACK_FROM_TARGET))),
                 Pair.of(12, MobSetWalkTargetFromAttackTargetIfTargetOutOfReachMaker.simple(1.0F)),
                 Pair.of(13, new MobMeleeAttackMaker(MELEE_ATTACK_COOLDOWN)),
@@ -174,11 +160,15 @@ public class PiglinAiDefinition {
                 Pair.of(16, new EraseMemoryIfMaker<>(isNearZombified(), MemoryModuleType.ATTACK_TARGET)));
     }
 
+    private static BiPredicateMaker<Mob, LivingEntity> isNearestValidAttackTarget() {
+        return new OptionalResultOfFirstIsSecond(PiglinlikeTargetFinder.piglin());
+    }
+
     static ImmutableList<Pair<Integer, ? extends BehaviorMaker>> initCelebrateActivity() {
         return ImmutableList.of(
                 Pair.of(10, avoidRepellent()),
                 Pair.of(11, new SetEntityLookTargetMaker(isPlayerHoldingLovedItem(), MAX_LOOK_DIST_FOR_PLAYER_HOLDING_LOVED_ITEM)),
-                Pair.of(12, new MobStartAttackingMaker(isAdult(), findNearestValidAttackTarget())),
+                Pair.of(12, new MobStartAttackingMaker(isAdult(), PiglinlikeTargetFinder.piglin())),
                 Pair.of(13, new SequenceTriggerIfMaker<>(new Negate<>(new PiglinIsDancing()), new GoToTargetLocationMaker(MemoryModuleType.CELEBRATE_LOCATION, 2, SPEED_MULTIPLIER_WHEN_GOING_TO_CELEBRATE_LOCATION))),
                 Pair.of(14, new SequenceTriggerIfMaker<>(new PiglinIsDancing(), new GoToTargetLocationMaker(MemoryModuleType.CELEBRATE_LOCATION, 4, SPEED_MULTIPLIER_WHEN_GOING_TO_CELEBRATE_LOCATION))),
                 Pair.of(15, RunOneMaker.simple(
@@ -190,7 +180,7 @@ public class PiglinAiDefinition {
 
 
     private static PredicateMaker<LivingEntity> isNotHoldingLovedItemInOffHand() {
-        return new AnyOf<>(List.of(new EntityCheckItemInSlot(EquipmentSlot.OFFHAND, new ItemIsEmpty()), new EntityCheckItemInSlot(EquipmentSlot.OFFHAND, new Negate<>(new ItemIsTag(ItemTags.PIGLIN_LOVED)))));
+        return new AnyOfPredicateMaker<>(List.of(new EntityCheckItemInSlot(EquipmentSlot.OFFHAND, new ItemIsEmpty()), new EntityCheckItemInSlot(EquipmentSlot.OFFHAND, new Negate<>(new ItemIsTag(ItemTags.PIGLIN_LOVED)))));
     }
 
     static ImmutableList<Pair<Integer, ? extends BehaviorMaker>> initAdmireItemActivity() {
@@ -205,30 +195,7 @@ public class PiglinAiDefinition {
                 Pair.of(10, PathfinderSetWalkTargetAwayFromMaker.entity(MemoryModuleType.AVOID_TARGET, SPEED_MULTIPLIER_WHEN_AVOIDING, DESIRED_DISTANCE_FROM_ENTITY_WHEN_AVOIDING, true)),
                 Pair.of(11, createIdleLookBehaviors()),
                 Pair.of(12, createIdleMovementBehaviors()),
-                Pair.of(13, new EraseMemoryIfMaker<>(new PiglinlikeStopFleeing(
-                        MemoryModuleType.AVOID_TARGET,
-                        isTargetHoglinAndOutnumberedByHoglins(),
-                        isTargetZombifiedAndNearestVisibleZombified()), MemoryModuleType.AVOID_TARGET)));
-    }
-
-    private static PredicateMaker<LivingEntity> isTargetHoglinAndOutnumberedByHoglins() {
-        return new AllOfPredicateMaker(
-                List.of(
-                        new EntityIsEntityType(EntityType.HOGLIN),
-                        new EntityIsOutnumbered(MemoryModuleType.VISIBLE_ADULT_PIGLIN_COUNT, MemoryModuleType.VISIBLE_ADULT_HOGLIN_COUNT))
-        );
-    }
-
-    private static BiPredicateMaker<LivingEntity, LivingEntity> isTargetZombifiedAndNearestVisibleZombified() {
-        return new AllOfBiPredicateMaker(
-                List.of(
-                        new OnlyCheckSecond<>(
-                                new AnyOf<>(List.of(
-                                        new EntityIsEntityType(EntityType.ZOMBIFIED_PIGLIN),
-                                        new EntityIsEntityType(EntityType.ZOGLIN)))),
-                        new EntityIsValueMemoryValue<>(MemoryModuleType.NEAREST_VISIBLE_ZOMBIFIED)
-                )
-        );
+                Pair.of(13, new EraseMemoryIfMaker<>(PiglinlikeStopFleeing.piglin(), MemoryModuleType.AVOID_TARGET)));
     }
 
     static ImmutableList<Pair<Integer, ? extends BehaviorMaker>> initRideHoglinActivity() {
@@ -241,11 +208,6 @@ public class PiglinAiDefinition {
                                         .addAll(createLookBehaviors())
                                         .add(Pair.of(new EntityTriggerIfMaker<>(new AlwaysTrue<>()), 1))
                                         .build()))),
-                Pair.of(13, new DismountOrSkipMountingMaker(MAX_WALK_DISTANCE_TO_START_RIDING,
-                        new PiglinlikeStopRiding(wasHurtRecently(), wasHurtRecently(), true, true))));
-    }
-
-    private static EntityCheckMemory wasHurtRecently() {
-        return new EntityCheckMemory(MemoryModuleType.HURT_BY, MemoryStatus.VALUE_PRESENT);
+                Pair.of(13, new DismountOrSkipMountingMaker(MAX_WALK_DISTANCE_TO_START_RIDING, PiglinlikeStopRiding.piglin())));
     }
 }
